2006-11-11 [S] Replaced init.inc.php sanitization and magicquotes remediation code (topic=38166.0) {Donnoman}
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3343 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -25,7 +25,7 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
-
+2006-11-11 [S] Replaced init.inc.php sanitization and magicquotes remediation code (topic=38166.0) {Donnoman}
 2006-11-09 [B] Fixed display of hit stats link on displayimage {Nibbler}
 2006-11-07 [B] Disabled global registration password for bridged installs {GauGau}
 2006-11-02 [O] Turned the voting links to javascript based redirection to stop bots from rating {Abbas}
