2006-11-12 [B] Fixed plugin api sleep and wake actions to be scoped correctly. {Donnoman}
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3344 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -25,7 +25,7 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
-
+2006-11-12 [B] Fixed plugin api sleep and wake actions to be scoped correctly. {Donnoman}
 2006-11-09 [B] Fixed display of hit stats link on displayimage {Nibbler}
 2006-11-09 [M] Updated version count from cpg1.4.10 to cpg1.4.11 in subversion repository as a preparation for a possible future release {GauGau}
 2006-11-09 [A] Added Thai language (user contribution) {GauGau}
