added album hits/stats feature
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3350 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -25,6 +25,8 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
+
+2006-11-14 [A] Added album hits feature. {Abbas}
 2006-11-12 [B] Fixed plugin api sleep and wake actions to be scoped correctly. {Donnoman}
 2006-11-11 [S] Replaced init.inc.php sanitization and magicquotes remediation code (topic=38166.0) {Donnoman}
 2006-11-09 [B] Fixed display of hit stats link on displayimage {Nibbler}
