Updating code in FAQ entry
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3357 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-11-17 [D] Updated code in FAQ entry {Nibbler}
 2006-11-16 [C] Unobfuscated the credits tag {GauGau}
 2006-11-14 [A] Added album hits feature. {Abbas}
 2006-11-12 [B] Fixed plugin api sleep and wake actions to be scoped correctly. {Donnoman}
