--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -25,6 +25,8 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
+
+2006-11-17 [D] Updated code in FAQ entry {Nibbler}
 2006-11-12 [B] Fixed plugin api sleep and wake actions to be scoped correctly. {Donnoman}
 2006-11-09 [B] Fixed display of hit stats link on displayimage {Nibbler}
 2006-11-09 [M] Updated version count from cpg1.4.10 to cpg1.4.11 in subversion repository as a preparation for a possible future release {GauGau}
