--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-11-27 [B] Fixing redirect to file after new upload while bridged. {Nibbler}
 2006-11-17 [D] Updated code in FAQ entry {Nibbler}
 2006-11-12 [B] Fixed plugin api sleep and wake actions to be scoped correctly. {Donnoman}
 2006-11-09 [B] Fixed display of hit stats link on displayimage {Nibbler}
