--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-12-05 [C] Added visibility toggle for debug_output to avoid debug_mode breaking the layout (width) {GauGau}
 2006-12-02 [B] bugfix for topic=38484 Problem creating/editing album via albmgr {Donnoman}
 2006-12-01 [D] Improved theme section {GauGau}
 2006-11-28 [A] Passing album id with upload link so that current album can be shown selected by default in upload form. {Aditya}
