Avoid attempting to send emails to admins who have no email address in profile.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3378 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-12-06 [B] Avoid attempting to send emails to admins who have no email address in profile. {Nibbler}
 2006-11-28 [A] Added Hindi language file (user contribution) {GauGau}
 2006-11-27 [B] Fixing redirect to file after new upload while bridged. {Nibbler}
 2006-11-17 [D] Updated code in FAQ entry {Nibbler}
