--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-12-14 [B] Fixed visibility of upload link for users disallowed public uploads, but allowed personal galleries {GauGau}
 2006-12-09 [A] Added feature to promote registration in the comments section {GauGau}
 2006-12-09 [A] Added optional transparent overlay against image theft {GauGau}
 2006-12-06 [B] Avoid attempting to send emails to admins who have no email address in profile. {Nibbler}
