--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-12-27 [C] Small fix in background image of sub menu for project_vii {GauGau}
 2006-12-27 [B] Updated zipdownload with more recent library to enable zip downloads for mac users {GauGau}
 2006-12-13 [B] Fixed visibility of upload link for users disallowed public uploads, but allowed personal galleries {GauGau}
 2006-12-11 [B] Replaced HTML entities with actual characters in Danish language file {GauGau}
