Fixed bug in search by keyword (thread id 34262)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3407 62f5abee-3c11-0410-b416-987344bf19e2

--- a/stable/CHANGELOG
+++ b/stable/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2006-12-28 [B] Fixed bug in search by keyword {GauGau}
 2006-12-27 [M] Updated copyright date {GauGau}
 2006-12-27 [C] Small fix in background image of sub menu for project_vii {GauGau}
 2006-12-27 [B] Updated zipdownload with more recent library to enable zip downloads for mac users {GauGau}
