--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-01-02 [D] Added stylesheet for printing the documentation {GauGau}
 2006-12-28 [B] Fixed garbage collection deleting special file "no_FTP-uploads_into_this_folder!" inside edit folder {GauGau}
 2006-12-28 [B] Fixed bug in search by keyword {GauGau}
 2006-12-27 [M] Updated copyright date {GauGau}
