--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-01-14 [B] Fixed situation in plugin api that caused bizarre plugin behavior when plugins called underlying plugin api hooks {Donnoman}
 2007-01-09 [O] Added nofollow attributes to image navigation bar to keep google from spidering slideshow links {GauGau}
 2007-01-08 [S] Fixed the vulnerability mentioned in topic 39943, though only admins could have exploited that. {Abbas}
 2007-01-02 [D] Added stylesheet for printing the documentation {GauGau}
