--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,9 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-01-18 [A] Added recording of voter id {GauGau}
+2007-01-18 [O] Added browser and os entries to vote stats records {GauGau}
+2007-01-18 [B] Fixed vote stats reference to hit stats table {GauGau}
 2007-01-15 [O] Moved statistics code into functions in separate include file for for re-use in other pages (planned overall stats page) {GauGau}
 2007-01-14 [B] Fixed situation in plugin api that caused bizarre plugin behavior when plugins called underlying plugin api hooks {Donnoman}
 2007-01-09 [O] Added nofollow attributes to image navigation bar to keep google from spidering slideshow links {GauGau}
