Moved some frequently used strings into $lang_common array for easier translation
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3431 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-01-18 [O] Moved some frequently used strings into $lang_common array for easier translation {GauGau}
 2007-01-18 [A] Added recording of voter id {GauGau}
 2007-01-18 [O] Added browser and os entries to vote stats records {GauGau}
 2007-01-18 [B] Fixed vote stats reference to hit stats table {GauGau}
