--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-01-19 [O] Embedded stats details into page instead of opening a pop-up {GauGau}
+2007-01-19 [O] Moved some translation strings that exist in multiple arrays into the common array for easier translation {GauGau}
 2007-01-18 [O] Moved some frequently used strings into $lang_common array for easier translation {GauGau}
 2007-01-18 [A] Added recording of voter id {GauGau}
 2007-01-18 [O] Added browser and os entries to vote stats records {GauGau}
