--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-01-24 [O] Added Lithuanian preparation to language selector {GauGau}
 2007-01-23 [O] Improved stats page (work in progress) {GauGau}
 2007-01-19 [O] Embedded stats details into page instead of opening a pop-up {GauGau}
 2007-01-19 [O] Moved some translation strings that exist in multiple arrays into the common array for easier translation {GauGau}
