Improved groups control panel section
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3438 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-01-25 [D] Improved groups control panel section {GauGau}
 2007-01-24 [O] Added Lithuanian preparation to language selector {GauGau}
 2007-01-23 [O] Improved stats page (work in progress) {GauGau}
 2007-01-19 [O] Embedded stats details into page instead of opening a pop-up {GauGau}
