--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-01-27 [B] Adding support for multiple window.onloads to resolve issue of conflicting calls. {Nibbler}
 2007-01-25 [D] Improved groups control panel section {GauGau}
 2007-01-24 [O] Added Lithuanian preparation to language selector {GauGau}
 2007-01-23 [O] Improved stats page (work in progress) {GauGau}
