--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-03-05 [A] Added thumbnail column to overall hit stats {GauGau}
 2007-03-02 [B] Populated hit details list for overall stats {GauGau}
 2007-02-24 [A] Improving ability of category manager to deal with large numbers of categories. {Nibbler}
 2007-02-05 [A] Added message block for advanced administration purposes and output of messages of previous screens (work in progress) {GauGau}
