Added link to intermediate view for individual stats
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3478 62f5abee-3c11-0410-b416-987344bf19e2

--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-03-05 [A] Added link to intermediate view for individual stats {GauGau}
 2007-03-05 [A] Added thumbnail column to overall hit stats {GauGau}
 2007-03-02 [B] Populated hit details list for overall stats {GauGau}
 2007-02-24 [A] Improving ability of category manager to deal with large numbers of categories. {Nibbler}
