--- a/devel/CHANGELOG
+++ b/devel/CHANGELOG
@@ -26,7 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
-2007-03-05 [A] Added pagination to overall hit stats {GauGau}
+2007-03-12 [A] Added sub-menu items to overall stats {GauGau}
+2007-03-09 [A] Added pagination to overall hit stats {GauGau}
 2007-03-09 [A] Added link to intermediate view for individual stats {GauGau}
 2007-03-05 [A] Added thumbnail column to overall hit stats {GauGau}
 2007-03-02 [B] Populated hit details list for overall stats {GauGau}
