Restructured doscumentation into several documents: added pics that used to be hotlinked.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3498 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-04-11 [D] Restructured doscumentation into several documents {GauGau}
 2007-03-12 [A] Added sub-menu items to overall stats {GauGau}
 2007-03-09 [A] Added pagination to overall hit stats {GauGau}
 2007-03-09 [A] Added link to intermediate view for individual stats {GauGau}
