--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,7 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
-2007-04-11 [D] Restructured doscumentation into several documents {GauGau}
+2007-04-13 [D] Added link icons for anchors for easier reference on support board {GauGau}
+2007-04-11 [D] Restructured documentation into several documents {GauGau}
 2007-03-12 [A] Added sub-menu items to overall stats {GauGau}
 2007-03-09 [A] Added pagination to overall hit stats {GauGau}
 2007-03-09 [A] Added link to intermediate view for individual stats {GauGau}
