--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-04-29 [D] Changed help function to reflect changes in documentation structure {GauGau}
 2007-04-25 [C] Fixed workaround for missing translation in category manager {GauGau}
 2007-04-20 [D] Added developer-section to documentation {GauGau}
 2007-04-13 [D] Added link icons for anchors for easier reference on support board {GauGau}
