--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-05-07 [A] Added option to hide stats on index page {GauGau}
 2007-05-03 [O] Added various archive and OpenDocument file types support {GauGau}
 2007-04-29 [D] Changed help function to reflect changes in documentation structure {GauGau}
 2007-04-25 [C] Fixed workaround for missing translation in category manager {GauGau}
