Changed picture title and description from regular text to header formating for search engine friendliness (dynamic textual content getting more relevance)
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3529 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-05-07 [O] Changed picture title and description from regular text to header formating for search engine friendliness {GauGau}
 2007-05-07 [O] Added noindex & nofollow meta-tags to meta albums for search engine friendliness {GauGau}
 2007-05-07 [O] Inversed order of items in title tag for search engine friendliness {GauGau}
 2007-05-07 [A] Added option to hide stats on index page {GauGau}
