--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-05-21 [A] Added browse-by-date meta-album {GauGau}
 2007-05-21 [B] Fixed charset for help pop-ups {GauGau}
 2007-05-07 [O] Changed picture title and description from regular text to header formating for search engine friendliness {GauGau}
 2007-05-07 [O] Added noindex & nofollow meta-tags to meta albums for search engine friendliness {GauGau}
