Removed deprecated HTML tags from email templates
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3549 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-05-21 [C] Removed deprecated HTML tags from email templates {GauGau}
 2007-05-21 [C] Replaced hard-coded bold tags with corresponding CSS formats in theme files {GauGau}
 2007-05-21 [A] Added browse-by-date meta-album {GauGau}
 2007-05-21 [B] Fixed charset for help pop-ups {GauGau}
