Added success/failure message on target page (instead of sending users to redirection page).
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3591 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -25,6 +25,8 @@ Changelog
 [O] = Optimization of code
 [S] = Security fix (issues that are related to security)
 *********************************************
+
+2007-06-04 [A] Added success/failure message on target page (instead of sending users to redirection page) {GauGau}
 2007-06-03 [B] Increased CPG_filetypes mime field length {Donnoman}
 2007-06-03 [O] Removed "CREATE TABLE IF NOT EXISTS" in update.sql; this case is already handled by the nature of update.php, a failure is preferred. {Donnoman}
 2007-06-03 [A] Additional mysql output while running update.php by appending ?debug to the url {Donnoman}
