Added rating confirmation on page
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3593 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-06-06 [A] Added rating confirmation on page {GauGau}
 2007-06-04 [A] Added success/failure message on target page (instead of sending users to redirection page) {GauGau}
 2007-06-03 [B] Increased CPG_filetypes mime field length {Donnoman}
 2007-06-03 [O] Removed "CREATE TABLE IF NOT EXISTS" in update.sql; this case is already handled by the nature of update.php, a failure is preferred. {Donnoman}
