--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-07-02 [C] Replaced string "CVS" with "SVN" to reflect the changed repository structure of the SF.net code repository {GauGau}
 2007-06-30 [B] Fixed multiple password protected albums bug {Abbas}
 2007-06-28 [M] Updated version count from cpg1.4.11 to cpg1.4.12 in subversion repository as a preparation for a possible future release {GauGau}
 2007-06-28 [M] Release of cpg1.4.11 {GauGau}
