--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-07-26 [B] Added missing curly brackets to user admin menu default definition {GauGau}
 2007-07-18 [A] Added Macedonian language file (partial translation, user contribution) {GauGau}
 2007-07-04 [B] Fixed improper fix for double quotes for comment input fields (thread ID 40423) {GauGau}
 2007-07-04 [M] Updated version count from cpg1.4.12 to cpg1.4.13 in subversion repository as a preparation for a possible future release {GauGau}
