--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-07-30 [O] Removed links in admin tools that now reside in admin menu {GauGau}
 2007-07-27 [M] Updated license reference from GNU GPL v2 to GNU GPL v3 {GauGau}
 2007-07-27 [B] Fixing issue creating new user with mysql strict mode {Nibbler}
 2007-07-26 [A] Added admin option to display redirection page or jump directly to target page with success/failure message at top of screen {GauGau}
