--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-07-30 [O] Re-ordered entries in config table for fresh installs {GauGau}
 2007-07-30 [O] Replaced link tag in language file for banning with placeholder {GauGau}
 2007-07-30 [C] Added attributes to class admin_float to fix overflow issue in IE for admin menu {GauGau}
 2007-07-30 [O] Removed links in admin tools that now reside in admin menu {GauGau}
