--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-08-09 [O] Re-structured config page for easier translation, separation of logic and content in language files, better usability and increased functionality {GauGau}
 2007-07-31 [A] Added plugin hook at the end of function get_pic_url {GauGau}
 2007-07-30 [O] Re-ordered entries in config table for fresh installs {GauGau}
 2007-07-30 [O] Replaced link tag in language file for banning with placeholder {GauGau}
