--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-08-18 [A] Skip redirection for album manager {GauGau}
 2007-08-18 [A] Added code to skip redirection for login and logout {GauGau}
 2007-08-17 [B] Replaced hard-coded text in plugin manager with translation string {GauGau}
 2007-08-17 [A] Added faster mode switch {GauGau}
