Added link to table footer of batch-add results to jump quickly to the second step of the batch-add. Added toggle to config and batch-add screen to display/hide preview thumbnails on the second batch-add screen. Added alternating table rows to batch-add.
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3852 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,9 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-07-18 [A] Added link to table footer of batch-add results to jump quickly to the second step of the batch-add {GauGau}
+2007-07-18 [A] Added toggle to config and batch-add screen to display/hide preview thumbnails on the second batch-add screen {GauGau}
+2007-07-18 [A] Added alternating table rows to batch-add {GauGau}
 2007-08-18 [A] Skip redirection for album manager {GauGau}
 2007-08-18 [A] Added code to skip redirection for login and logout {GauGau}
 2007-08-17 [B] Replaced hard-coded text in plugin manager with translation string {GauGau}
