--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-08-18 [B] Quota check only applies to uploads to user galleries {Nibbler}
 2007-08-18 [B] Avoid redirecting users to the logout page after logging in {Nibbler}
 2007-08-18 [B] Fixed sending of duplicate forgot password emails {Nibbler}
 2007-07-18 [O] Removed from intermediate image view page (dsiplayimage.php) JavaScript-only features for users with JavaScript disabled {GauGau}
