Added noscript section to pages that require JavaScript
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3898 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-08-21 [C] Added noscript section to pages that require JavaScript {GauGau}
 2007-08-20 [D] Added keyword manager section to documentation {GauGau}
 2007-08-19 [D] Added keywords section to documentation {GauGau}
 2007-08-18 [B] XHTML ampersand fix in clickable keywords {Nibbler}
