--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,7 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
-2007-08-21 [A] Adding news section for the admin to alert him about updates {GauGau]
+2007-08-23 [A] Adding "last comment" and "last upload" to user's profile edit page {GauGau}
+2007-08-21 [A] Adding news section for the admin to alert him about updates {GauGau}
 2007-08-21 [O] Replaced "ALL" setting for filetypes with slash-separated list {GauGau}
 2007-08-21 [A] Added another regex check to config that makes sure the user overwrites certain default values when configuring his gallery for the first time {GauGau}
 2007-08-21 [C] Added noscript section to pages that require JavaScript {GauGau}
