Hid the config option "Display album description" from view by commenting it out in most languages. Feature hasn't been implemented yet. Config option doesn't do anything. Thread ID 42256
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@3919 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,8 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-08-25 [C] Removed config option "Display album description" that hasn't been implemented yet {GauGau}
+2007-08-25 [O] Removed byte order mark for some language files {GauGau}
 2007-08-24 [D] Back-ported some of the documentation improvements for the next coppermine version to cpg1.4.x {GauGau}
 2007-08-24 [D] Added section to documentation that is meant to explain the need for upgrading {GauGau}
 2007-08-18 [B] XHTML ampersand fix in clickable keywords {Nibbler}
