--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-09-04 [A] Added preliminary (beta) bridge for SMF 2.x (user contribution) {GauGau}
 2007-08-25 [C] Removed config option "Display album description" that hasn't been implemented yet {GauGau}
 2007-08-25 [O] Removed byte order mark for some language files {GauGau}
 2007-08-24 [D] Back-ported some of the documentation improvements for the next coppermine version to cpg1.4.x {GauGau}
