--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-09-06 [A] Added feature (posted at http://coppermine-gallery.net/forum/index.php?topic=36087) to display error message (using javascript and PHP both) if name for comment is same as default name of comment {Amit}
 2007-09-05 [S] Added code to remove risky characters in log file name in URL and to check if given log file name's directory is current directory or not to fix second vulnerability posted at http://coppermine-gallery.net/forum/index.php?topic=46623 {Amit}
 2007-09-05 [S] If 'http' or 'script' is set in referer then referer will be set to 'index.php' - first vulnerability posted at http://coppermine-gallery.net/forum/index.php?topic=46623  {Amit}
 2007-09-04 [A] Added preliminary (beta) bridge for SMF 2.x (user contribution) {GauGau}
