--- a/cpg1.4.x/CHANGELOG
+++ b/cpg1.4.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-09-17 [B] Fixed usergroups-bug in bridge file for SMF2.0 (user contribution) {GauGau}
 2007-09-14 [M] Release of cpg1.4.13 {GauGau}
 2007-09-13 [M] Updated documentation with reference to release announcement thread {GauGau}
 2007-09-08 [M] Upgraded version numbers to prepare for release {GauGau}
