Split admin tools into separate page
git-svn-id: https://coppermine.svn.sourceforge.net/svnroot/coppermine/trunk@4006 62f5abee-3c11-0410-b416-987344bf19e2

--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-10-15 [D] Split admin tools into separate page {GauGau}
 2007-10-08 [O] Sidebar made themeable {GauGau}
 2007-10-08 [A] Added sidebar {GauGau}
 2007-09-27 [A] Added social bookmarks icons {GauGau}
