--- a/cpg1.5.x/CHANGELOG
+++ b/cpg1.5.x/CHANGELOG
@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2007-10-19 [O] Replaced hard-coded language in util.php with translation strings {Frantz}
 2007-10-17 [A] Added plugin "Visible HookPoints" to package {GauGau}
 2007-10-17 [A] Added feature "delete files older than XXX days" {Frantz}
 2007-10-15 [D] Split admin tools into separate page {GauGau}
